test/spec_vectors/simd_i32x4_arith/fail/module_11.wat
(module (func $i32x4.mul-arg-empty (result v128) (i32x4.mul)))